# Django-REST-Framework

./: Readme.md  docker-compose.yml  pyproject.toml
blog_api/: settings.py  urls.py
post/: models.py  serializers.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py
